// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Registration /> interactions should show modal if user is already registered with other organizations 1`] = `
<div
  className="modal is-visible"
>
  <div
    className="modal-container bg"
  >
    <button
      className="modal-close-btn"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      ✖
    </button>
    <div>
      <div
        className="message"
      >
        <p>
          CONFLICT_ORGS
        </p>
        <ul>
          <li
            className="org-list"
            key="default"
          >
            default
          </li>
        </ul>
        <p>
          CONFLICT_SIGNIN
        </p>
      </div>
    </div>
    <p
      className="modal-buttons"
    >
      <button
        className="button partial"
        onClick={[Function]}
        type="button"
      >
        YES
      </button>
      <button
        className="button partial"
        onClick={[Function]}
        type="button"
      >
        NO
      </button>
    </p>
  </div>
</div>
`;

exports[`<Registration /> interactions should show modal if user is registered but not associated with any org 1`] = `
<div
  className="modal is-visible"
>
  <div
    className="modal-container bg"
  >
    <button
      className="modal-close-btn"
      onClick={[Function]}
      type="button"
    >
      ✖
    </button>
    <div>
      <div
        className="message"
      >
        <p>
          NO_ORGS
        </p>
        <ul />
        <p>
          CONFLICT_SIGNIN
        </p>
      </div>
    </div>
    <p
      className="modal-buttons"
    >
      <button
        className="button partial"
        onClick={[Function]}
        type="button"
      >
        YES
      </button>
      <button
        className="button partial"
        onClick={[Function]}
        type="button"
      >
        NO
      </button>
    </p>
  </div>
</div>
`;

exports[`<Registration /> rendering should render correctly 1`] = `
<Fragment>
  <div
    className="container content"
    id="registration"
  >
    <div
      className="inner"
    >
      <form
        className="main-column "
        id="registration-form"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          <div
            className="fieldset"
          >
            <div
              className="row email"
            >
              <label
                htmlFor="email"
              >
                EMAIL
              </label>
              <input
                autoComplete="email"
                className="input "
                id="email"
                name="email"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="EMAIL_PHOLD"
                required={true}
                title="EMAIL_PTRN_DESC"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="new-password"
                className="input "
                id="password"
                name="password1"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={
                  Object {
                    "current": null,
                  }
                }
                toggler={[Function]}
              />
            </div>
            <div
              className="row password-confirm"
            >
              <label
                htmlFor="password-confirm"
              >
                CONFIRM_PWD_LBL
              </label>
              <input
                autoComplete="new-password"
                className="input "
                id="password-confirm"
                name="password2"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="CONFIRM_PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={
                  Object {
                    "current": null,
                  }
                }
                toggler={[Function]}
              />
            </div>
          </div>
          <div
            className="row add-info"
          >
            REGISTER_ADD_INFO_TXT
          </div>
          <div
            className="row register"
          >
            <input
              className="button full"
              type="submit"
              value="REGISTER_BTN_TXT"
            />
          </div>
          <div
            className="row links"
          >
            <p>
              <Link
                className="link"
                to="/default/login"
              >
                LINKS_LOGIN_TXT
              </Link>
            </p>
          </div>
        </div>
      </form>
      <Connect(Contact) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/registration"
        />
      }
      path=":name"
    />
  </Routes>
</Fragment>
`;

exports[`<Registration /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<Fragment>
  <div
    className="container content"
    id="registration"
  >
    <div
      className="inner"
    >
      <form
        className="main-column "
        id="registration-form"
        onSubmit={[Function]}
      >
        <div
          className="inner"
        >
          <div
            className="fieldset"
          >
            <div
              className="row email"
            >
              <label
                htmlFor="email"
              >
                EMAIL
              </label>
              <input
                autoComplete="email"
                className="input "
                id="email"
                name="email"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="EMAIL_PHOLD"
                required={true}
                title="EMAIL_PTRN_DESC"
                type="email"
                value=""
              />
            </div>
            <div
              className="row password"
            >
              <label
                htmlFor="password"
              >
                PWD_LBL
              </label>
              <input
                autoComplete="new-password"
                className="input "
                id="password"
                name="password1"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={
                  Object {
                    "current": null,
                  }
                }
                toggler={[Function]}
              />
            </div>
            <div
              className="row password-confirm"
            >
              <label
                htmlFor="password-confirm"
              >
                CONFIRM_PWD_LBL
              </label>
              <input
                autoComplete="new-password"
                className="input "
                id="password-confirm"
                name="password2"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="CONFIRM_PWD_PHOLD"
                required={true}
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <PasswordToggleIcon
                hidePassword={true}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                isVisible={false}
                parentClassName=""
                secondInputRef={
                  Object {
                    "current": null,
                  }
                }
                toggler={[Function]}
              />
            </div>
          </div>
          <div
            className="row add-info"
          >
            REGISTER_ADD_INFO_TXT
          </div>
          <div
            className="row register"
          >
            <input
              className="button full"
              type="submit"
              value="REGISTER_BTN_TXT"
            />
          </div>
          <div
            className="row links"
          >
            <p>
              <Link
                className="link"
                to="/default/login"
              >
                LINKS_LOGIN_TXT
              </Link>
            </p>
          </div>
        </div>
      </form>
      <Connect(Contact) />
    </div>
  </div>
  <Routes>
    <Route
      element={
        <Memo(Connect(Component))
          prevPath="/default/registration"
        />
      }
      path=":name"
    />
  </Routes>
</Fragment>
`;

exports[`Registration and Mobile Phone Verification interactions should render PhoneInput lazily and handlers should work correctly 1`] = `
<Suspense
  fallback={
    <input
      className="input"
      name="phone_number"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="PHONE_PHOLD"
      type="tel"
      value=""
    />
  }
>
  <lazy
    country="it"
    enableSearch={false}
    excludeCountries={Array []}
    inputProps={
      Object {
        "autoComplete": "tel",
        "className": "form-control input ",
        "id": "phone-number",
        "name": "phone_number",
        "required": true,
      }
    }
    name="phone_number"
    onChange={[Function]}
    onKeyDown={[Function]}
    onlyCountries={Array []}
    placeholder="PHONE_PHOLD"
    preferredCountries={Array []}
    value=""
  />
</Suspense>
`;
